tests/negative/typecheck/annotation.orng
// annotation.orng:6:21: error: expected a value of type `Int`, got a value of type `Type`
//     let x: Int = (a: Int)
//                    ^
// 
fn main() -> Int {
    let x: Int = (a: Int)
    0
}